second commit back end

--- a/EVidyalaya/src/main/resources/application.properties
+++ b/EVidyalaya/src/main/resources/application.properties
@@ -16,4 +16,9 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.open-in-view=false
 #property to disable hibernateLazyInitializer during initialized proxies
 #spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+#name of the server side folder to save uploaded contents
+file.upload.location=file
+#limiting max file size for upload
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=15MB
 
